samples/_failures_safe/1761170787_727bd5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bc917abf.c: In function ‘main’:
./samples/SAFE/__tmp_bc917abf.c:150:13: error: expected expression at end of input
  150 |             if (*data_ptr ==
      |             ^~
./samples/SAFE/__tmp_bc917abf.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bc917abf.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bc917abf.c:150:13: error: expected declaration or statement at end of input
